<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.gatech.gtri.obm</groupId>
  <artifactId>nist-obm-translator</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <scm>
    <connection>scm:git:https://github.com/ontological-behavior-modeling/nist-obm-translator.git</connection>
    <developerConnection>scm:git:https://github.com/ontological-behavior-modeling/nist-obm-translator.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/ontological-behavior-modeling/nist-obm-translator</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/ontological-behavior-modeling/nist-obm-translator</url>
    </repository>
  </distributionManagement>

  <properties>
    <alloy.version>5.1.0-SNAPSHOT</alloy.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <pomsort.version>3.2.1</pomsort.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spotless.version>2.36.0</spotless.version>
    <omgutil.version>1.0.1</omgutil.version>
    <commons-io.version>2.15.0</commons-io.version>
    <gs-ui-swing.version>2.0</gs-ui-swing.version>
    <gs-core.version>2.0</gs-core.version>
    <lombok.version>1.18.26</lombok.version>
    <junit-jupiter-engine.version>5.9.2</junit-jupiter-engine.version>
    <junit-jupiter-params.version>5.9.2</junit-jupiter-params.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-engine.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit-jupiter-params.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://github.com/AlloyTools/org.alloytools.alloy/tree/v5.1.0 -->
    <!-- snapshots published at https://oss.sonatype.org/content/repositories/snapshots/org/alloytools/ -->
    <dependency>
      <groupId>org.alloytools</groupId>
      <artifactId>org.alloytools.alloy.application</artifactId>
      <version>${alloy.version}</version>
    </dependency>
    <!-- see for documentation and configuration information: https://github.com/Ekryd/sortpom -->
    <dependency>
      <groupId>com.github.ekryd.sortpom</groupId>
      <artifactId>sortpom-maven-plugin</artifactId>
      <version>${pomsort.version}</version>
    </dependency>
    <dependency>
      <groupId>com.diffplug.spotless</groupId>
      <artifactId>spotless-maven-plugin</artifactId>
      <version>${spotless.version}</version>
    </dependency>
    <dependency>
      <groupId>edu.umd</groupId>
      <artifactId>omgutil3</artifactId>
      <version>${omgutil.version}</version>
    </dependency>
    <!-- for graph -->
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-core</artifactId>
      <version>${gs-core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-ui-swing</artifactId>
      <version>${gs-ui-swing.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
  </dependencies>

  <!-- <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
          <show>public</show>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
 -->

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>ignore</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>oss-sonatype</id>
      <name>oss-sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>ignore</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>omgutil</id>
      <name>GitHub Packages for omgutil</name>
      <url>https://maven.pkg.github.com/ontological-behavior-modeling/omgutil</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <build>
    <plugins>
      <!-- This plugin enables skipping creation of the normal jar file -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <!-- This plugin enables creation of a jar with depenedencies -->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>edu.gatech.gtri.obm.translator.alloy.userinterface.UserInterface</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <!-- This plugin allows for the custom versioning tags (i.e v1.0.0) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <checkModificationExcludes>
            <checkModificationExclude>settings.xml</checkModificationExclude>
          </checkModificationExcludes>
        </configuration>
      </plugin>
      <plugin>
        <!-- see for documentation and configuration information: https://github.com/Ekryd/sortpom -->
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>${pomsort.version}</version>
        <configuration>
          <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>sort</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- see for documentation and config: https://github.com/diffplug/spotless/tree/main/plugin-maven#google-java-format -->
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <java>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>src/main/java/**/*.java</include>
              <include>src/test/java/**/*.java</include>
            </includes>
            <googleJavaFormat>
              <version>1.8</version>
              <!-- optional, 1.8 is minimum supported version -->
              <style>GOOGLE</style>
              <!-- or AOSP (optional) -->
              <reflowLongStrings>true</reflowLongStrings>
              <!-- optional -->
              <!-- optional: custom group artifact (you probably don't need this) -->
              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
            </googleJavaFormat>
          </java>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <show>public</show>
          <doclint>none</doclint>
          <javadocDirectory>${basedir}/src/main/javadoc</javadocDirectory>
          <nohelp>true</nohelp>
          <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
          <docletArtifact>
            <groupId>nl.talsmasoftware</groupId>
            <artifactId>umldoclet</artifactId>
            <version>2.1.1</version>
          </docletArtifact>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
